did some styling which is not complete rn

--- a/p02/index.html
+++ b/p02/index.html
@@ -94,7 +94,7 @@
                 <div class="seat"></div>
                 <div class="seat"></div>
             </div>
-            <p>You've selected <span class="count">0</span>seats and your total in $ is <span class="total">0</span></p>
+            <p>You've selected <span id="count" class="count">0</span> seats and your total in $ is <span id="total" class="total">0</span></p>
         </div>
     </div>
     <a href=".."><button>Back</button></a>
