did some js work
updated the toggle of seat,updated price and count, saved the data in local storage, updating the ui based upon local storage remaining

--- a/p02/index.html
+++ b/p02/index.html
@@ -97,7 +97,7 @@
                 <div class="seat"></div>
             </div>  
         </div>
-        <p class="totals">You've selected <span id="count">0</span> seats and your total in $ is <span id="total">0</span></p>
+        <p class="totals">You've selected <span id="count">0</span> seats and your total is $<span id="total">0</span></p>
     <a href=".."><button>Back</button></a>
     <script src="script.js"></script>
 </body>
