added clear button and completed the entire project

--- a/p02/index.html
+++ b/p02/index.html
@@ -40,7 +40,7 @@
                 <div class="seat"></div>
                 <div class="seat"></div>
                 <div class="seat"></div>
-                <div class="seat"></div>
+                <div class="seat occupied"></div>
                 <div class="seat"></div>
                 <div class="seat"></div>
                 <div class="seat"></div>
@@ -52,8 +52,8 @@
                 <div class="seat"></div>
                 <div class="seat"></div>
                 <div class="seat"></div>
-                <div class="seat"></div>
-                <div class="seat"></div>
+                <div class="seat occupied"></div>
+                <div class="seat occupied"></div>
                 <div class="seat"></div>
             </div>
             <div class="row">
@@ -98,7 +98,8 @@
             </div>  
         </div>
         <p class="totals">You've selected <span id="count">0</span> seats and your total is $<span id="total">0</span></p>
-    <a href=".."><button>Back</button></a>
+    <a href=".."><button class="b1">Back</button></a>
+    <button id="button" class="but">Clear</button>
     <script src="script.js"></script>
 </body>
 </html>
