completed everything except script
-Did html work
-added background picture
-worked on slider and buttons
-added time

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Link to project is given below:</h2>
     <li><a href="/p02/index.html">Project2</a></li>
+    <li><a href="/p03/index.html">Project3</a></li>
 </body>
 </html>
