--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seat Booker</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Index</title>
 </head>
 <body>
-    <h2>Link to project is given below:</h2>
-    <li><a href="/p02/index.html">Project2</a></li>
-    <li><a href="/p03/index.html">Project3</a></li>
+    <h2>Select any project:</h2>
+    <button class="bt1"><li><a href="/p02/index.html">Project2</a></li></button>
+    <button class="bt2"><li><a href="/p03/index.html">Project3</a></li></button>
 </body>
 </html>
