Exchange Rate Calculator completed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h2>Select any project:</h2>
-    <button class="bt1"><li><a href="/p02/index.html">Project2</a></li></button>
-    <button class="bt2"><li><a href="/p03/index.html">Project3</a></li></button>
+    <button class="bt1"><li><a href="/p02/index.html">Cinema Seat</a></li></button>
+    <button class="bt2"><li><a href="/p03/index.html">Video Player</a></li></button>
+    <button class="bt3"><li><a href="/p04/index.html">Exchange Rate</a></li></button>
+
 </body>
 </html>
