completed array methods

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button class="bt1"><li><a href="/p02/index.html">Cinema Seat</a></li></button>
     <button class="bt2"><li><a href="/p03/index.html">Video Player</a></li></button>
     <button class="bt3"><li><a href="/p04/index.html">Exchange Rate</a></li></button>
+    <button class="bt4"><li><a href="/p05/index.html">Array</a></li></button>
 
 </body>
 </html>
