--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -9,8 +9,44 @@
     <title>Syed M Hammad</title>
 </head>
 <body>
-    <h1>Syed M Hammad</h1>
-    <h2>Bachelors in Computer Science</h2>
+    <nav>
+        <div class="logo">
+            <img src="C:\Users\dell\Documents\GitHub\Project2\p06\images\65941221_1080889452117893_8220799298418245632_n.jpg" alt="Image failed to load">
+            <h3>Syed M Hammad</h3>
+        </div>
+        <div class="projects">
+            <ul>
+                <li><a href="/p02/index.html">Project 1</a></li>
+                <li><a href="/p03/index.html">Project 2</a></li>
+                <li><a href="/p04/index.html">Project 3</a></li>
+                <li><a href="/p05/index.html">Project 4</a></li>
+            </ul>
+        </div>
+    </nav>
+    <header>
+        <button class="navi"><i class="fas fa-bars"></i></button>
+        <h1>SYED M HAMMAD</h1>
+        <h2>Bachelors in Computer Science</h2>
+        <p>A hard working and enthusiastic soon to be Conputer Scientist. Willing to provide services to clients as well as companies.</p>
+        <p>Ultimate aim is to establish an organization which on one hand work as a proper Computer Science/Information technology company and on the other hand provide professional level training as well as cousrses to those who are needy. </p>
+    </header>
+    <div class="about">
+        <h2 class="heading">EDUCATION</h2>
+        <h4><strong>Bachelors in Science of Computer Sciences</strong>BS(CS)<br><a class="intitute" href="http://nu.edu.pk/">Fast-National University of Computer and Emerging Sciences, Karachi</a><br>(2018-2022)</h4>
+        <h4><strong>Intermediate</strong><br><a class="college" href="https://www.agakhanschools.org/pakistan/akhsskar/index">Aga Khan Higher Secondary School, Karachi.</a><br>(2016-2018)</h4>
+        <h4><strong>Matriculation</strong><br><a class="college" href="https://www.facebook.com/ETNSuperHighwayCampusOfficial/">Education Trust Nasra School, Karachi.</a><br>(2016)</h4>
+        <h2 class="skills">SKILLS</h2>
+        <ul>
+            <li><h4>C language</h4></li>
+            <li><h4>C++ language</h4></li>
+            <li><h4>Python language</h4></li>
+            <li><h4>HTML</h4></li>
+            <li><h4>CSS</h4></li>
+            <li><h4>JavaScript</h4></li>
+        </ul>
+    </div>
+    
+
     <script src="script.js"></script>
     
 </body>
