--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -44,6 +44,10 @@
             <li><h4>CSS</h4></li>
             <li><h4>JavaScript</h4></li>
         </ul>
+        <h2 class="projects">PROJECTS</h2>
+        <ul>
+            <li><a href="https://github.com/SyedMHammad/Project2/tree/main/covid"><h4>COVID Management Assistant for Government</h4></a></li>
+        </ul>
     </div>
     
 
