--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -47,6 +47,11 @@
         <h2 class="projects">PROJECTS</h2>
         <ul>
             <li><a href="https://github.com/SyedMHammad/Project2/tree/main/covid"><h4>COVID Management Assistant for Government</h4></a></li>
+            <li><a href="https://infallible-jepsen-726d35.netlify.app/">HTML Form Validator</a></li>
+            <li><a href="https://inspiring-almeida-d25296.netlify.app/p02/index.html">Cinema Seat Booker</a></li>
+            <li><a href="https://infallible-jepsen-726d35.netlify.app/">HTML Form Validator</a></li>
+            <li><a href="https://infallible-jepsen-726d35.netlify.app/">HTML Form Validator</a></li>
+            <li><a href="https://infallible-jepsen-726d35.netlify.app/">HTML Form Validator</a></li>
         </ul>
     </div>
     
