--- a/p03/index.html
+++ b/p03/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="progress.css">
 </head>
 <body>
-    <h1>S1MPLE'S SUPREMACY</h1>
-
+    <h1>SIMPLE'S SUPREMACY</h1>
     <video src="/p03/videos/10 MINUTES of S1MPLE S SATISFYING AWP SKILLS_720P HD.mp4" id="video" class="video" poster="./Images/CSGO-Operation-10-Details.jpg"></video>
     <div class="controls">
         <button id="play" class="play">
