--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button class="bt2"><li><a href="/p03/index.html">Video Player</a></li></button>
     <button class="bt3"><li><a href="/p04/index.html">Exchange Rate</a></li></button>
     <button class="bt4"><li><a href="/p05/index.html">Array</a></li></button>
-    <button class="bt4"><li><a href="/p06/index.html">Porfolio</a></li></button>
+    <button class="bt4"><li><a href="/p06/portfolio.html">Porfolio</a></li></button>
 
 </body>
 </html>
