--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="https://www.facebook.com/photo/?fbid=1080889445451227&set=a.105131369693711">
+            <img src="C:\Users\dell\Documents\GitHub\Project2\p06\images\65941221_1080889452117893_8220799298418245632_n.jpg" alt="Image failed to load">
             <div class="na">
                 <h3>Syed M Hammad</h3>
                 <button class="close"><i class="far fa-times-circle"></i></button></div>
