--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <nav>
+        <button class="close"><i class="fas fa-bars"></i></button></div>
         <div class="logo">
-            <img src="C:\Users\dell\Documents\GitHub\Project2\p06\images\65941221_1080889452117893_8220799298418245632_n.jpg" alt="Image failed to load">
+            <img src="/p06/images/65941221_1080889452117893_8220799298418245632_n.jpg" alt="Image failed to load">
             <div class="na">
                 <h3>Syed M Hammad</h3>
-                <button class="close"><i class="far fa-times-circle"></i></button></div>
+                
         </div>
         <div class="projects">
             <ul>
-                <li><strong>Web Development Projects</strong></li>
                 <li><a href="/p02/index.html">Project 1</a></li>
                 <li><a href="/p03/index.html">Project 2</a></li>
                 <li><a href="/p04/index.html">Project 3</a></li>
