--- a/p06/portfolio.html
+++ b/p06/portfolio.html
@@ -30,15 +30,14 @@
         <button class="navi" id="navi"><i class="fas fa-bars"></i></button>
         <h1>SYED M HAMMAD</h1>
         <h2>Bachelors in Computer Science</h2>
-        <p>A hard working and enthusiastic soon to be Conputer Scientist. Willing to provide services to clients as well as companies.</p>
-        <p>Ultimate aim is to establish an organization which on one hand work as a proper Computer Science/Information technology company and on the other hand provide professional level training as well as cousrses to those who are needy. </p>
+        <p>A hard working and enthusiastic soon to be Computer Scientist. Willing to provide services to clients as well as companies.<br>Ultimate aim is to establish an organization which on one hand will work as a proper Computer Science/Information technology company and on the other hand will provide professional level training as well as cousrses to those who are needy. </p>
         <button class="pop" id="pop">Give Feedback</button>
     </header>
     <div class="about">
         <h2 class="heading">EDUCATION</h2>
-        <h4><strong>Bachelors in Science of Computer Sciences</strong>BS(CS)<br><a class="intitute" href="http://nu.edu.pk/">Fast-National University of Computer and Emerging Sciences, Karachi</a><br>(2018-2022)</h4>
-        <h4><strong>Intermediate</strong><br><a class="college" href="https://www.agakhanschools.org/pakistan/akhsskar/index">Aga Khan Higher Secondary School, Karachi.</a><br>(2016-2018)</h4>
-        <h4><strong>Matriculation</strong><br><a class="college" href="https://www.facebook.com/ETNSuperHighwayCampusOfficial/">Education Trust Nasra School, Karachi.</a><br>(2016)</h4>
+        <p><strong class="no">Bachelors in Science of Computer Sciences</strong><br>BS(CS)<br><i><a class="college" href="http://nu.edu.pk/">Fast-National University of Computer and Emerging Sciences, Karachi</a></i><br>(2018-2022)</p>
+        <p><strong class="no">Intermediate</strong><br><i><a class="college" href="https://www.agakhanschools.org/pakistan/akhsskar/index">Aga Khan Higher Secondary School, Karachi.</a></i><br>(2016-2018)</p>
+        <p><strong class="no">Matriculation</strong><br><i><a class="college" href="https://www.facebook.com/ETNSuperHighwayCampusOfficial/">Education Trust Nasra School, Karachi.</a></i><br>(2016)</p>
         <h2 class="skills">SKILLS</h2>
         <ul class="ski">
             <li><h4>C language</h4></li>
@@ -69,7 +68,7 @@
             <li><strong>PROCOM (2019)</strong><br> Highest rated annual event of Fast-Nuces, Karachi.</li>
             <li><strong>NU-FEST (2019)</strong><br> A well celebrated event of Fast-Nuces, Karachi along with Concert.</li>
         </ul>
-        <div class="pop" id="pop">
+        <div class="pops" id="pops">
             <div class="pop-up" id="pop-up">
                 <button class="pop-close" id="pop-close">
                     <i class="far fa-times-circle"></i>
@@ -86,7 +85,7 @@
                         <input type="email" name="email" placeholder="Enter Email">
                     </div>
                     <div>
-                        <label for="feedback">Feedback</label>
+                        <label for="feedback">Feedback:</label>
                         <input type="text" name="feedback" placeholder="Enter Feedback">
                     </div>
                     <input type="submit" value="Submit" class="Submit-btn">
