--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button class="bt3"><li><a href="/p04/index.html">Exchange Rate</a></li></button>
     <button class="bt4"><li><a href="/p05/index.html">Array</a></li></button>
     <button class="bt4"><li><a href="/p06/portfolio.html">Porfolio</a></li></button>
+    <button class="bt4"><li><a href="/p07/index.html">Hangman</a></li></button>
 
 </body>
 </html>
