--- a/p07/index.html
+++ b/p07/index.html
@@ -50,7 +50,7 @@
         </div>
 
     </div>
-    <div class="gameover-container-show" id="gameover-container">
+    <div class="gameover-container" id="gameover-container">
         <div class="gameover">
             <div class="closeheading">
                 <h2>Game Over</h2>
