--- a/p07/index.html
+++ b/p07/index.html
@@ -22,42 +22,48 @@
                 <line x1="70" y1="30" x2="70" y2="300" />
                 <line x1="20" y1="300" x2="120" y2="300" />
                 <!-- Head -->
-                <circle cx="150" cy="80" r="20" />
+                <circle cx="150" cy="80" r="20" class="man"/>
                 <!-- body -->
-                <line x1="150" y1="100" x2="150" y2="200"/>
+                <line x1="150" y1="100" x2="150" y2="200" class="man"/>
                 <!-- arms -->
-                <line x1="150" y1="120" x2="115" y2="180" />
-                <line x1="150" y1="120" x2="185" y2="180" />
+                <line x1="150" y1="120" x2="115" y2="180" class="man"/>
+                <line x1="150" y1="120" x2="185" y2="180" class="man"/>
                 <!-- legs -->
-                <line x1="150" y1="200" x2="115" y2="260" />
-                <line x1="150" y1="200" x2="185" y2="260" />
+                <line x1="150" y1="200" x2="115" y2="260" class="man"/>
+                <line x1="150" y1="200" x2="185" y2="260" class="man"/>
             </svg>
         </div>
         <div class="correct-container" id="correct-container">
-            <p>WORD:</p>
+            <!-- <p>WORD:</p>
             <div class="correct">
             <div class="letter">h</div>
             <div class="letter">a</div>
             <div class="letter">m</div>
             <div class="letter">m</div>
             <div class="letter">a</div>
-            <div class="letter">d</div>
+            <div class="letter">d</div>  -->
         </div>
         </div>
         <div class="incorrect-container">
-            <p>INCORRECT GUESSES:</p>
-            <span>a,b,c,d,e,f</span>
+            <div class="incorrect-letters">
+            <!-- /*<p>INCORRECT GUESSES:</p> -->
+            <!-- <span>a,b,c,d,e,f</span> -->
+        </div>
         </div>
 
     </div>
     <div class="gameover-container" id="gameover-container">
         <div class="gameover">
             <div class="closeheading">
-                <h2>Game Over</h2>
-        <button class="close" id="close"><i class="far fa-times-circle"></i></button>  
+                <h2 id="gameover-msg">Game Over</h2>
+                <button class="close" id="close"><i class="far fa-times-circle"></i></button>  
+            </div>
+           <h3>Congrats! You Saved The Man!</h3>
+           <button id="playagain">Play Again</button>
+       </div>
     </div>
-        <h3>Congrats! You Saved The Man!</h3>
-        <button class="gameover-btn">Play again</button>
+    <div class="notification" id="notification">
+        <p>You have already guessed this letter!</p>
     </div>
     </div>
 
