made some progress in js

--- a/p07/index.html
+++ b/p07/index.html
@@ -34,18 +34,17 @@
             </svg>
         </div>
         <div class="correct-container" id="correct-container">
-            <!-- <p>WORD:</p>
-            <div class="correct">
+            <!-- <div class="correct">
             <div class="letter">h</div>
             <div class="letter">a</div>
             <div class="letter">m</div>
             <div class="letter">m</div>
             <div class="letter">a</div>
-            <div class="letter">d</div>  -->
+            <div class="letter">d</div>   -->
         </div>
         </div>
-        <div class="incorrect-container">
-            <div class="incorrect-letters">
+        <div class="incorrect-container" id="incorrect-container">
+            <div class="incorrect-letters" id="incorrect-letters">
             <!-- /*<p>INCORRECT GUESSES:</p> -->
             <!-- <span>a,b,c,d,e,f</span> -->
         </div>
