--- a/p07/index.html
+++ b/p07/index.html
@@ -52,17 +52,20 @@
 
     </div>
     <div class="gameover-container" id="gameover-container">
-        <div class="gameover">
+        <div class="gameover" id="gameover">
             <div class="closeheading">
-                <h2 id="gameover-msg">Game Over</h2>
+                <h2>Game Over</h2>
                 <button class="close" id="close"><i class="far fa-times-circle"></i></button>  
             </div>
-           <h3>Congrats! You Saved The Man!</h3>
+           <h3 id="gameover-msg">Congrats! You Saved The Man!</h3>
            <button id="playagain">Play Again</button>
        </div>
     </div>
     <div class="notification" id="notification">
         <p>You have already guessed this letter!</p>
+    </div>
+    <div class="notificationw" id="notificationw">
+        <p>Only a-z are considered valid!</p>
     </div>
     </div>
 
