--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button class="bt4"><li><a href="/p05/index.html">Array</a></li></button>
     <button class="bt4"><li><a href="/p06/portfolio.html">Porfolio</a></li></button>
     <button class="bt4"><li><a href="/p07/index.html">Hangman</a></li></button>
+    <button class="bt4"><li><a href="/p08/index.html">Meal Generator</a></li></button>
 
 </body>
 </html>
