--- a/p08/index.html
+++ b/p08/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-5LVQDXJ');</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M18KMZSDTB"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -18,6 +23,8 @@
     <title>Meal Generator</title>
 </head>
 <body>
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LVQDXJ"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <h1>Recipe Finder</h1>
         <div class="flex">
