--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   gtag('config', 'UA-234923672-1');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5480099328220142"
+     crossorigin="anonymous"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
